# clc

./: .clang-format  .gitignore  CMakeLists.txt
include/: ast.h  expected.h  lexer.h
src/: ast.cpp  lexer.cpp  main.cpp
