cmake_minimum_required(VERSION 3.20)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_COMPILER "clang++")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

project(
	Connect4
	VERSION 0.1.0
)

add_compile_options(-mbmi2)

file(GLOB_RECURSE SRC_FILES src/*.cpp)
ADD_EXECUTABLE(CONNECT4 ${SRC_FILES})

TARGET_INCLUDE_DIRECTORIES(CONNECT4 PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
