cmake_minimum_required(VERSION 3.28)

project(
	Connect4
	VERSION 0.1.0
)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
#set(CMAKE_CXX_COMPILER "clang++")

add_compile_options(-mbmi2)

file(GLOB_RECURSE SRC_FILES src/*.cpp)
ADD_EXECUTABLE(CLC ${SRC_FILES})

TARGET_INCLUDE_DIRECTORIES(CLC PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_compile_features(CLC PRIVATE cxx_std_17)
